--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
 							work experience.
 						</p>
 
-						<p><h2><span style='font-weight:bold;'>Skills</span></h2> Programming Languages:<br> <em>R, Python, SQL, C++ </em></p>
+						<p><h2><span style='font-weight:bold;'>Skills</span></h2> Programming Languages:<br> <em>R, Python, MySQL </em></p>
 							<p> Data Visualization Tools:<br> <em>Jupyter Notebook, Tableau, Microsoft Excel, ggplot2, Matplotlib, Plotly</em> </p>
-							<p>Other: <br> <em>LaTeX, RStan, Google Suite, Skateboarding</em></p>
+							<p>Other: <br> <em>Spark, pandas, NumPy, scikit-learn, Google Suite, Skateboarding</em></p>
 						
 						
 					</section>
