--- a/index.html
+++ b/index.html
@@ -37,11 +37,14 @@
 						<header class="major"></header>
 							<h2>About Me</h2>
 						</header>
-						<p>I am a 4th year undergraduate who is pursuing a B.S. in Statistics and Data Science at 
-							the University of California, Santa Barbara. I am currently seeking data science and
-							analytics internships or full-time roles to leverage my skills and gain more practical
-							work experience.
+						<p>I am a team player with a strong apt for statistical analysis and good interpersonal skills. 
+							Looking to obtain part time or full-time data analyst positions where I can apply my quantitative skills to large scale problems. 
 						</p>
+						
+						<p>
+							Currently I am a 4th year undergraduate who is pursuing a B.S. in Statistics and Data Science at the University of California, Santa Barbara.
+						
+						</p>	
 
 						<p><h2><span style='font-weight:bold;'>Skills</span></h2> Programming Languages:<br> <em>R, Python, MySQL </em></p>
 							<p> Data Visualization Tools:<br> <em>Jupyter Notebook, Tableau, Microsoft Excel, ggplot2, Matplotlib, Plotly</em> </p>
