--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 						<header class="major"></header>
 							<h2>About Me</h2>
 						</header>
-						<p>I am a team player with a strong apt for statistical analysis and good interpersonal skills. 
-							Looking to obtain part time or full-time data analyst positions where I can apply my quantitative skills to large scale problems. 
+						<p>Looking to obtain a data analyst/data scientist position where I can apply my quantitative skills to large scale problems.
+							I am a team player with a strong apt for statistical analysis and good interpersonal skills.
 						</p>
 						
 						<p>
