--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 						</p>	
 
 						<p><h2><span style='font-weight:bold;'>Skills</span></h2> Statistical Programming Languages:<br> <em>R, Python, SQL </em></p>
-							<p> Specialized Skills:<br> <em>Spark/PySpark, NumPy, pandas, scikit-learn, ggplot, Tableau, Microsoft Excel, ggplot</em> </p>
+							<p> Specialized Skills:<br> <em>Microsoft Excel, Tableau, Spark/PySpark, NumPy, pandas, scikit-learn, ggplot</em> </p>
 							<p>Other: <br> <em>Tableau, LaTeX, Jupyter, Google Suite, Skateboarding</em></p>
 						
 						
