--- a/index.html
+++ b/index.html
@@ -67,6 +67,14 @@
 									decision trees, and random forests.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/thumbs/yelpthumb.png" class="image fit thumb"><img src="images/thumbs/yelpthumb.png" alt="" /></a>
+								<h2><a href="https://github.com/gavintieng/YelpRatingPrediction"> Predicting Yelp Ratings Using Inspection Data </a></h2>
+								<p>Using Toronto Public Health Inspection Data (DineSafe), we created a predictive model that utilizes Random Forest Classifiers and Logistic Regression
+									to accurately predict the Yelp rating of a given establishment. Constructed using SQL, PySpark, MLLib, and JuypterLab.
+									
+								</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/thumbs/tempthumb.png" class="image fit thumb"><img src="images/thumbs/tempthumb.png" alt="" /></a>
 								<h2><a href="https://drive.google.com/file/d/1EfI1U5sbuJI-2APOgRaJEL-89hx_RqX7/view?usp=sharing">Using Time Series Analysis to Forecast Rising Temperatures</a></h2>
 								<p>Using data scraped from the Australian Bureau of Meteorology, I conducted
