--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 						<header class="major"></header>
 							<h2>About Me</h2>
 						</header>
-						<p> 	Team player with a strong apt for statisical analysis and good interpersonal skills. Currently looking to obtain a data analyst position where I can apply my quantitative skills to large scale problems.
+						<p> 	Looking to obtain a position that allows me to apply my quantitative skills to large scale problems. I am a team player with a strong apt for statistical analysis and good interpersonal skills. Primarily looking for positions related to data analysis, finance, or data engineering.  
 							
 						</p>
 						
