--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/headshot.png" alt="" /></a>
+					<a href="#" class="image avatar"><img src="images/gavin_headshot.jpeg" alt="" /></a>
 					<h1><strong>Gavin Tieng</h1>
 					<h2> Statistics and Data Science @ UCSB <h2>
 				</div>
