--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/gavin_headshot.jpeg" alt="" /></a>
 					<h1><strong>Gavin Tieng</h1>
-					<h2> Statistics and Data Science @ UCSB <h2>
+					<h2> BS, Statistics and Data Science <h2>
 				</div>
 					<form action="https://www.linkedin.com/in/gavintieng/">
 						<input type="submit" value="LinkedIn" />
