--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 					<a href="#" class="image avatar"><img src="images/gavin_headshot.jpeg" alt="" /></a>
 					<h1><strong>Gavin Tieng</h1>
 					<h2> BS, Statistics and Data Science <h2>
+					<h2> University of California, Santa Barbara <h2>
 				</div>
 					<form action="https://www.linkedin.com/in/gavintieng/">
 						<input type="submit" value="LinkedIn" />
