--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/gavin_headshot.jpeg" alt="" /></a>
-					<h1><strong>Gavin Tieng</h1>
-					<h2> BS, Statistics and Data Science <h2>
-					<h2> University of California, Santa Barbara <h2>
+					<h2><strong>Gavin Tieng</h2>
+					<h4> BS, Statistics and Data Science </h4>
+					<h4> University of California, Santa Barbara </h4>
 				</div>
 					<form action="https://www.linkedin.com/in/gavintieng/">
 						<input type="submit" value="LinkedIn" />
